Realizado parte configuracion

--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -11,7 +11,7 @@
     </header>
 
     <div class="image-container">
-        <img class="animate__animated animate__fadeInLeft" src="assets/Reglas.png" alt="Imagen" type="button"
+        <img class="animate__animated animate__fadeInLeft" src="assets/reglas.png" alt="Imagen" type="button"
             data-bs-toggle="modal" data-bs-target="#exampleModal"
             style="width: 60px; height: 60px; margin-top: -265px; margin-left: -650px;">
         <div class="image-text">
