AP-68 elegir canciones, tambien esta hecho el agregado de playlist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           <p class="animate__animated animate__fadeInLeftBig" style="margin-bottom: 7px;"><strong>Materia: </strong>
             Laboratorio VI / Metodología de la Investigación</p>
           <p class="animate__animated animate__fadeInRightBig" style="margin-bottom: 7px;"><strong>Profesores:
-            </strong>Juan Jose Azar / El Otro</p>
+            </strong>Juan Jose Azar / Cristian Halm</p>
         </div>
         <div class="col-md-6" class="animate__animated animate__fadeInUpBig">
           <div class="footer-content">
