--- a/src/app/component/make-a-playlist/make-a-playlist.component.html
+++ b/src/app/component/make-a-playlist/make-a-playlist.component.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <button [routerLink]="['/make-a-playlist/recommendations']" routerLinkActive="active">FUNCIONA RECOMENDACION?</button>
     <div class="row">
         <div class="col-sm-6" *ngIf="showIcon1">
             <div class="animate__animated animate__backInDown">
