--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,13 +17,13 @@
       <div>
         <div>
           <p class="animate__animated animate__fadeInLeftBig" style="margin-bottom: 6px;"><strong>Proyecto:
-            </strong>Apify Maybe</p>
+            </strong>Apify</p>
           <p class="animate__animated animate__fadeInRightBig" style="margin-bottom: 7px;"><strong>Facultad: </strong>
-            Universidad Tecnológica de Mar del Plata</p>
+            "Universidad Tecnológica Nacional de Mar del Plata"</p>
           <p class="animate__animated animate__fadeInLeftBig" style="margin-bottom: 7px;"><strong>Materia: </strong>
-            Laboratorio VI / Metodología de la Investigación</p>
+            "Laboratorio de Computación IV" / "Metodología de Sistemas I"</p>
           <p class="animate__animated animate__fadeInRightBig" style="margin-bottom: 7px;"><strong>Profesores:
-            </strong>Juan Jose Azar / El Otro</p>
+            </strong>Juan José Azar / Cristian Halm</p>
         </div>
         <div class="col-md-6" class="animate__animated animate__fadeInUpBig">
           <div class="footer-content">
