--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <!-- <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Darse de baja</a>
           <a class="dropdown-item" href="#">Cerrar sesion</a>-->
 
-          <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal2" href="#">
+          <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal2">
             <img src="assets/DeleteUser.png" alt="Imagen" style="width: 35px; height: 35px;">
             <strong>Darse de baja</strong>
           </a>
