--- a/src/app/component/social/social.component.css
+++ b/src/app/component/social/social.component.css
@@ -19,3 +19,90 @@ body {
 .table {
     border-radius: 10px;
 }
+
+/*---------------------------------*/
+  
+  :focus {
+    outline: none;
+  }
+  
+  input::placeholder {
+    color: lightgray;
+  }
+  
+  .wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+  }
+  
+  .input-src {
+    position: relative;
+    font-weight: 400 !important;
+    border: solid 1px white;
+    border-radius: 2rem;
+    background-color: white;
+    box-sizing: border-box;
+    padding: .75rem;
+    font-size: 1rem;
+    width: 100%;
+    box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.048),
+    0 100px 80px rgba(0, 0, 0, 0.08);
+  }
+  
+  .limit-width {
+    position: relative;
+    width: 35rem;
+  }
+  
+  .results {
+    background: white;
+    padding: 0;
+    margin-top: .5rem;
+    border-radius: 1rem;
+    width: 100%;
+    box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.048),
+    0 100px 80px rgba(0, 0, 0, 0.08);
+  }
+  
+  .results ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .results ul li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 400;
+    padding: .5rem;
+    border-bottom: solid 1px #f1f1f1;
+  
+  }
+  
+  .results ul li.followed:hover{
+    background-color: #D1F19E;
+}
+
+.results ul li.not-followed:hover{
+    background-color: #F58A97;
+}
+  
+  .results ul li:last-child {
+    border-bottom: transparent;
+  }
+  
+  .results ul li {
+    padding: .35rem;
+    border-radius: 1rem;
+    transition: all ease 150ms;
+  
+  }
+  
+  .results ul li .url_photo {
+    width: 30px;
+    border-radius: 1rem;
+  }
