--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <!-- <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Darse de baja</a>
           <a class="dropdown-item" href="#">Cerrar sesion</a>-->
 
-          <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+          <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             <img src="assets/DeleteUser.png" alt="Imagen" style="width: 35px; height: 35px;">
             <strong>Darse de baja</strong>
           </a>
@@ -22,8 +22,7 @@
       </ul>
     </div>
 
-    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
           <div class="modal-header">
             <button *ngIf="hintDeleteButton" type="button" class="btn-close" data-bs-dismiss="modal"
