--- a/src/app/component/make-a-playlist-quiz/make-a-playlist-quiz.component.html
+++ b/src/app/component/make-a-playlist-quiz/make-a-playlist-quiz.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
+
 <body>
-    
+
 
     <div class="container">
         <form [formGroup]="quizForm">
@@ -37,7 +38,8 @@
                         decis?</strong></label>
                 <select class="form-select" formControlName="question4">
                     <option value="1">Que le pregunte directamente.</option>
-                    <option value="2">Que la deje!! No vale la pena que se esté preocupando por alguien que no lo merece.</option>
+                    <option value="2">Que la deje!! No vale la pena que se esté preocupando por alguien que no lo
+                        merece.</option>
                     <option value="3">Que investigue primero, no hay que arriesgarse.</option>
                     <option value="4">Answer Testing</option>
                 </select>
@@ -49,6 +51,7 @@
                     <option value="1">En el físico. Si no me entra por los ojos no hay nada que hacer...</option>
                     <option value="2">En el estilo que tiene. Me gustan medios raros.</option>
                     <option value="3">En su personalidad!!</option>
+                    <option value="4">Answer Testing</option>
                 </select>
             </div>
 
@@ -58,6 +61,7 @@
                     <option value="1">A Nueva York. Me cansaria de gastar plata.</option>
                     <option value="2">A Londres. Es una ciudad que tiene de todo (ponele).</option>
                     <option value="3">A Los Ángeles. A ver si me encuentro algun famoso.</option>
+                    <option value="4">Answer Testing</option>
                 </select>
             </div>
 
@@ -68,6 +72,7 @@
                     <option value="1">Youtube.</option>
                     <option value="2">Instagram.</option>
                     <option value="3">Twitter.</option>
+                    <option value="4">Answer Testing</option>
                 </select>
             </div>
 
@@ -77,7 +82,7 @@
                     <option value="1">Con mi mama, Le cuento todo.</option>
                     <option value="2">Me vuelven locos todos en mi familia pero los quiero.</option>
                     <option value="3">Con mi papa, Me banca en todas.</option>
-                    <option value="4">Con mi papa, Me banca en todas.</option>
+                    <option value="4">Answer Testing</option>
                 </select>
             </div>
 
@@ -87,6 +92,7 @@
                     <option value="1">A Justin Bieber, No me gusta mucho su música.</option>
                     <option value="2">A Eminem, No entiendo su estilo.</option>
                     <option value="3">A The weekend, me cae mal.</option>
+                    <option value="4">Answer Testing</option>
                 </select>
             </div>
 
@@ -104,7 +110,7 @@
             *ngIf="currentQuestion < totalQuestions && !quizForm.get('question' + currentQuestion)?.pristine && quizForm.get('question' + currentQuestion)?.valid"
             (click)="nextQuestion()" class="btn btn-dark">Siguiente</button>
 
-        <button *ngIf="currentQuestion === totalQuestions && quizForm.valid" (click)="sumValues()"
+        <button *ngIf="currentQuestion === totalQuestions && quizForm.valid" (click)="calculateValues()"
             class="btn btn-dark">Enviar</button>
 
         <div *ngIf="currentQuestion === totalQuestions">
@@ -113,5 +119,16 @@
             </p>
 
         </div>
+    </div>
+    
+    <div *ngIf="showData" class="table-container rounded">
+        <table class="table table-dark table-striped rounded">
+            <tbody>
+                <tr *ngFor="let recommended of recommended.tracks">
+                    <td class="align-middle" style="font-size: 18px;">{{ recommended.name }}</td>
+                    <td class="align-middle">{{recommended.artists[0].name}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
