AP-80 mandar a testing

--- a/src/app/component/make-a-playlist-quiz/make-a-playlist-quiz.component.html
+++ b/src/app/component/make-a-playlist-quiz/make-a-playlist-quiz.component.html
@@ -130,5 +130,8 @@
                 </tr>
             </tbody>
         </table>
+        <button (click)="postPlaylist()">Crear Playlist</button>
+        <button (click)="getSongsRecommendedURIS()">Get Uris</button>
+        <button (click)="postSongOnPlaylist()">Añadir canciones a playlist</button>
     </div>
 </body>
