--- a/src/app/component/guess-song/guess-song.component.html
+++ b/src/app/component/guess-song/guess-song.component.html
@@ -1,144 +1,154 @@
-<app-navbar></app-navbar>
+<div class="div-container">
+    <div class="background">
+        <app-navbar></app-navbar>
 
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-</head>
+        <div class="title">
+            <h1 class="animate__animated animate__zoomIn">🎵
+                GUESS THE SONG 🎵</h1>
+        </div>
 
-<body>
+        <div type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <div class="animate__animated animate__fadeInLeft">
+                <div class="animate__animated animate__fadeInLeft">
+                    <img class="image-instructions" src="assets/reglas.png" alt="Imagen">
+                </div>
+                <div class="text-instructions">
+                    <p class="animate__animated animate__fadeInLeft">
+                        <strong>INSTRUCCIONES</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
 
-    <header>
-        <h1 class="animate__animated animate__zoomIn">🎵 GUESS THE SONG 🎵</h1>
-    </header>
+        <div type="button" data-bs-toggle="collapse" data-bs-target="#leaderboardCollapse" *ngIf="!gameStarted">
+            <div class="animate__animated animate__fadeInRight">
+                <div class="animate__animated animate__fadeInRight">
+                    <img class="image-leaderboard" src="assets/Leaderboard.png" alt="Imagen">
+                </div>
 
-    <div class="image-container">
-        <img class="animate__animated animate__fadeInLeft" src="assets/reglas.png" alt="Imagen" type="button"
-            data-bs-toggle="modal" data-bs-target="#exampleModal"
-            style="width: 60px; height: 60px; margin-top: -265px; margin-left: -650px;">
-        <div class="image-text">
-            <p class="animate__animated animate__fadeInLeft" style="margin-top: 70px;"><strong>INSTRUCCIONES</strong>
+                <div class="text-leaderboard">
+                    <p class="animate__animated animate__fadeInRight">
+                        <strong>LEADERBOARD</strong>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="start">
+            <div (click)="getThePlaylistForGuess()" *ngIf="!gameStarted" class="animate__animated animate__fadeInUp">
+                <img class="image-start" src="assets/Jugar.png" type="button" alt="Imagen">
+                <p style="color: rgb(255, 255, 255); " type="button"><strong>EMPEZAR A JUGAR</strong></p>
+            </div>
+        </div>
+
+        <div class="leaderboard-container">
+
+            <div class="collapse" id="leaderboardCollapse" *ngIf="!gameStarted">
+                <div class="col-md-6 offset-md-6">
+                    <div class="table-container rounded">
+                        <div class="animate__animated animate__fadeInRightBig">
+                            <table class="table table-striped">
+                                <tbody>
+                                    <tr *ngFor="let user of leaderboardData; let i = index">
+                                        <td class="align-middle"><img [src]="user.url_photo" alt="User Photo"
+                                                class="user-photo rounded-circle"></td>
+                                        <td class="align-middle" style="font-size: 18px;">{{ user.displayName }}</td>
+                                        <td class="align-middle" style="font-size: 18px;">{{ user.points }}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="hints" *ngIf="win">
+            <p *ngIf="hintMessage" class="animate__animated animate__fadeIn">
+                <strong>{{hintMessage}}</strong>
             </p>
         </div>
-    </div>
 
-    <div class="row" class="animate__animated animate__fadeInRight">
-        <img class="animate__animated animate__fadeInLeft" src="assets/Leaderboard.png" alt="Imagen" type="button"
-            data-bs-toggle="collapse" data-bs-target="#leaderboardCollapse" aria-expanded="false"
-            aria-controls="leaderboardCollapse"
-            style="width: 60px; height: 60px; margin-top: -300px; margin-left: 1010px; cursor: pointer;">
-        <div class="image-text">
-            <p class="animate__animated animate__fadeInRigth"
-                style="margin-top: 135px; margin-left: 1080px;color: rgb(255, 255, 255);"><strong>LEADERBOARD</strong>
-            </p>
-        </div>
-
-        <div class="collapse" id="leaderboardCollapse">
-            <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: 100px; margin-left: 1000px;">
-                <div class="table-container rounded">
-                    <table class="table table-dark table-striped rounded">
-                        <tbody>
-                            <tr *ngFor="let user of leaderboardData; let i = index">
-                                <td class="align-middle"><img [src]="user.url_photo" alt="User Photo"
-                                        class="user-photo rounded-circle"></td>
-                                <td class="align-middle" style="font-size: 18px;">{{ user.displayName }}</td>
-                                <td class="align-middle" style="font-size: 18px;">{{ user.points }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+        <div class="album" *ngIf="win">
+            <div class="animate__animated animate__fadeIn" *ngIf="albumImageUrl">
+                <img class="albumCover" [src]="albumImageUrl">
             </div>
         </div>
-    </div>
 
-    <div class="container">
-
-        <div class="animate__animated animate__fadeInUp">
-
-            <div class="d-grid gap-2 col-6 mx-auto">
-                <div (click)="getThePlaylistForGuess()" *ngIf="!gameStarted">
-                    <img src="assets/Jugar.png" type="button" alt="Imagen" style="width: 60px; height: 60px;">
-                    <p style="color: rgb(255, 255, 255);"><strong>EMPEZAR A JUGAR</strong></p>
-                </div>
-            </div>
-
-            <div *ngIf="alert" class="animate__animated animate__fadeInUpBig">
-                <div id="loseModal" class="alert" role="alert"
-                    style="width: 500px; height: 170px; margin-top: 40px; margin-left: 315px; background-color: rgba(193, 147, 220, 0.8); ">
-                    <h4 class="alert-heading">GAME OVER</h4>
-                    <p><strong>La canción era:"{{winningTrack.track.name}}"</strong></p>
-                    <p><strong>Tus puntos fueron: {{this.points}}</strong></p>
-                    <p class="mb-0"><strong>Segui intentando no te rindas!</strong></p>
-                </div>
-            </div>
-        </div>
 
         <div *ngIf="win">
-            <div class="hints" class="animate__animated animate__fadeIn">
-                <p *ngIf="hintMessage" class="animate__animated animate__fadeIn"><strong>{{hintMessage}}</strong></p>
-                <div class="album-container" class="animate__animated animate__fadeIn" *ngIf="albumImageUrl">
-                    <img class="albumCover" [src]="albumImageUrl" width="200" height="200">
-                </div>
-            </div>
-
-            <div>
+            <div class="audioPlayer">
                 <audio controls id="audioPlayer" class="animate__animated animate__fadeInLeftBig"></audio>
-
             </div>
+        </div>
 
+        <div class="tracks" *ngIf="win">
             <div class="animate__animated animate__zoomIn">
                 <button
-                    style="margin: 0 5px; margin-bottom: 6px; background-color: rgba(193, 147, 220, 0.9); color: rgba(32, 32, 32, 1)"
+                    style="margin-left: 10px; margin-bottom: 6px; background-color: rgba(193, 147, 220, 0.9); color: rgba(32, 32, 32, 1);"
                     *ngFor="let song of randomSongs" class="btn btn-dark" type="button"
-                    (click)="handleOptionClick(song)" [disabled]="songsButtonDisabled"><strong>{{
-                        song.track.name }}</strong></button>
+                    (click)="handleOptionClick(song)">
+                    <strong style="font-size: 12px;">{{ song.track.name }}</strong>
+                </button>
             </div>
+        </div>
 
+
+        <div *ngIf="win">
             <div class="animate__animated animate__fadeInRightBig">
-                <div (click)="showHint()" [style.opacity]="hintButtonDisabled ? '0.5' : '1'">
-                    <img src="assets/Hints.png" type="button" alt="Imagen" style="width: 40px; height: 40px;">
-                    <p><strong>HINT</strong></p>
+                <div class="hint-button" (click)="showHint()" [style.opacity]="hintButtonDisabled ? '0.5' : '1'">
+                    <img src="assets/Hints.png" type="button" alt="Imagen" style="width: 50px; height: 50px;">
                 </div>
+                <p type="button" [style.opacity]="hintButtonDisabled ? '0.5' : '1'"
+                    style="display: flex; justify-content: center;"><strong>HINT</strong></p>
             </div>
         </div>
 
         <audio id="winSound" src="assets/correct.mp3" preload="auto"></audio>
         <audio id="loseSound" src="assets/wrong.mp3" preload="auto"></audio>
 
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.9);">
                     <div class="modal-body">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
+                        <div style="display: flex; justify-content: center;">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
                         <p>
                             <strong>Inicio del Juego:</strong>
-                            Verás un botón que dice "Empezar a jugar". Haz clic en este botón para comenzar el juego.
+                            Verás un botón que dice "Empezar a jugar". Haz clic en este botón para comenzar el
+                            juego.
                         </p>
                         <p>
                             <strong>Adivina la Canción:</strong>
-                            Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones de
+                            Después de presionar el botón "Empezar a jugar", se te presentarán varias opciones
+                            de
                             canciones.
                             Escucha la pista de audio y elige la canción que creas que es la correcta.
                         </p>
                         <p>
                             <strong>Pistas:</strong>
                             Si necesitas ayuda, puedes hacer click en el botón "Hint" (Pista). Te proporcionará
-                            información adicional para ayudarte a adivinar la canción. Ten en cuenta que cada pista
+                            información adicional para ayudarte a adivinar la canción. Ten en cuenta que cada
+                            pista
                             revelada puede
                             restar puntos, así que úsalas con precaución.
                         </p>
                         <p>
                             <strong>Puntuación:</strong>
-                            Tu puntuación se acumula en función de cuántas pistas de ayuda utilizas y de si adivinas
+                            Tu puntuación se acumula en función de cuántas pistas de ayuda utilizas y de si
+                            adivinas
                             correctamente la canción. Intenta acumular la mayor cantidad de puntos posible.
                         </p>
                         <p>
                             <strong>Nuevo Juego:</strong>
-                            Si deseas jugar de nuevo, puedes presionar el botón "Empezar a jugar" nuevamente para
+                            Si deseas jugar de nuevo, puedes presionar el botón "Empezar a jugar" nuevamente
+                            para
                             reiniciar el juego con una nueva selección de canciones.
                         </p>
                         <p>
                             <strong>
-                                Espero que este instructivo te ayude a comprender cómo jugar "Guess the Song". ¡Disfruta
+                                Espero que este instructivo te ayude a comprender cómo jugar "Guess the Song".
+                                ¡Disfruta
                                 del
                                 juego y diviértete adivinando las canciones!
                             </strong>
@@ -148,4 +158,22 @@
             </div>
         </div>
     </div>
-</body>
+</div>
+
+<div #magicButton  type="button" data-bs-toggle="modal" data-bs-target="#gameoverModal" *ngIf="gameStarted">
+    <div class="modal fade" id="gameoverModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog d-flex align-items-center justify-content-center">
+            <div class="modal-content" style="background-color: rgba(193, 147, 220, 0.8);">
+                <div class="modal-body d-flex justify-content-end">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <h4 class="text-center"><strong>GAME OVER</strong></h4>
+                <div class="modal-body text-center">
+                    <p><strong>La canción era: "{{winningTrack.track.name}}"</strong></p>
+                    <p><strong>Tus puntos fueron: {{this.points}}</strong></p>
+                    <p class="mb-0"><strong>¡Seguí intentando, no te rindas!</strong></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
