--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,11 +1,18 @@
-body {
-    background-image: url('../../../assets/Background.png');
-    background-size: cover;
+.div-container {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+ 
+  }
+  
+  .background {
+    background-image: url('/assets/Background.png');
+    background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100vw;
     height: 100vh;
     margin: 0;
-}
+    overflow: hidden; 
+    z-index: -1;
+  }
