--- a/src/app/component/social/social.component.css
+++ b/src/app/component/social/social.component.css
@@ -1,108 +1,132 @@
-body {
-    background-image: url('../../../assets/Background.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+.div-container {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+
 }
+
+.background {
+  background-image: url('/assets/Background.png');
+  background-size: 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.search {
+
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+}
+
+
 .user-photo {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
-.table {
-    border-radius: 10px;
+
+.follows {
+  margin-left: 12.3%;
+  margin-top: -30%;
 }
+
+.table-follows {
+  border-radius: 10px;
+  width: 300px;
+  margin-left: -25%;
+}
+
 
 /*---------------------------------*/
-  
-  :focus {
-    outline: none;
-  }
-  
-  input::placeholder {
-    color: lightgray;
-  }
-  
-  .wrapper {
-    display: flex;
-    justify-content: center;
-    padding: 1rem;
-  }
-  
-  .input-src {
-    position: relative;
-    font-weight: 400 !important;
-    border: solid 1px white;
-    border-radius: 2rem;
-    background-color: white;
-    box-sizing: border-box;
-    padding: .75rem;
-    font-size: 1rem;
-    width: 100%;
-    box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.048),
-    0 100px 80px rgba(0, 0, 0, 0.08);
-  }
-  
-  .limit-width {
-    position: relative;
-    width: 35rem;
-  }
-  
-  .results {
-    background: white;
-    padding: 0;
-    margin-top: .5rem;
-    border-radius: 1rem;
-    width: 100%;
-    box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.048),
-    0 100px 80px rgba(0, 0, 0, 0.08);
-  }
-  
-  .results ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .results ul li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: 400;
-    padding: .5rem;
-    border-bottom: solid 1px #f1f1f1;
-  
-  }
-  
-  .results ul li.followed:hover{
-    background-color: #D1F19E;
+
+:focus {
+  outline: none;
 }
 
-.results ul li.not-followed:hover{
-    background-color: #F58A97;
+input::placeholder {
+  color: lightgray;
 }
-  
-  .results ul li:last-child {
-    border-bottom: transparent;
-  }
-  
-  .results ul li {
-    padding: .35rem;
-    border-radius: 1rem;
-    transition: all ease 150ms;
-  
-  }
-  
-  .results ul li .url_photo {
-    width: 30px;
-    border-radius: 1rem;
-  }
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.input-src {
+  position: relative;
+  font-weight: 400 !important;
+  border: solid 1px white;
+  border-radius: 2rem;
+  background-color: white;
+  box-sizing: border-box;
+  padding: .75rem;
+  font-size: 1rem;
+  width: 100%;
+  box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.048),
+    0 100px 80px rgba(0, 0, 0, 0.08);
+}
+
+.limit-width {
+  position: relative;
+  width: 35rem;
+}
+
+.results {
+  background: white;
+  padding: 0;
+  margin-top: .5rem;
+  border-radius: 1rem;
+  width: 100%;
+  box-shadow: 0 6.7px 5.3px rgba(0, 0, 0, 0.032),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.048),
+    0 100px 80px rgba(0, 0, 0, 0.08);
+}
+
+.results ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.results ul li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 400;
+  padding: .5rem;
+  border-bottom: solid 1px #f1f1f1;
+
+}
+
+.results ul li.followed:hover {
+  background-color: #D1F19E;
+}
+
+.results ul li.not-followed:hover {
+  background-color: #F58A97;
+}
+
+.results ul li:last-child {
+  border-bottom: transparent;
+}
+
+.results ul li {
+  padding: .35rem;
+  border-radius: 1rem;
+  transition: all ease 150ms;
+
+}
+
+.results ul li .url_photo {
+  width: 30px;
+  border-radius: 1rem;
+}
