--- a/src/app/component/social/social.component.html
+++ b/src/app/component/social/social.component.html
@@ -1,105 +1,107 @@
-<app-navbar></app-navbar>
 
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-</head>
+<div class="div-container">
+    <div class="background">
+        
+        <app-navbar></app-navbar>
 
-<body>
+        <div class="search">
+            <div class="wrapper" class="animate__animated animate__fadeIn">
+                <div class="limit-width" #asBoxInput>
 
-    <div class="wrapper" class="animate__animated animate__fadeIn">
-        <div class="limit-width" #asBoxInput>
+                    <input class="form-control input-src" [spellcheck]="false" placeholder="🔍 Buscar amigos"
+                        type="text" (input)="searchFriends($event)">
 
-            <input class="form-control input-src" [spellcheck]="false" placeholder="🔍 Buscar amigos" type="text"
-                (input)="searchFriends($event)">
+                    <div class="results" *ngIf="filteredFriends" type="button">
+                        <ul>
+                            <li *ngFor="let friend of filteredFriends"
+                                [ngClass]="{'followed': isFriend(friend),'not-followed': !isFriend(friend) }"
+                                (click)="selectedFriends(friend)" data-bs-toggle="modal" data-bs-target="#ModalFollow">
 
-            <div class="results" *ngIf="filteredFriends" type="button">
-                <ul>
-                    <li *ngFor="let friend of filteredFriends"
-                        [ngClass]="{'followed': isFriend(friend),'not-followed': !isFriend(friend) }"
-                        (click)="selectedFriends(friend)" data-bs-toggle="modal" data-bs-target="#ModalFollow">
+                                <div class="name" target="_blank" type="button">
+                                    <p>{{friend.id}}</p>
+                                </div>
 
-                        <div class="name" target="_blank" type="button">
-                            <p>{{friend.id}}</p>
-                        </div>
-
-                        <img [src]="friend.url_photo" alt="User Photo" class="user-photo rounded-circle">
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="modal fade" id="ModalFollow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
-        *ngIf="selectedFriend">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                <img [src]="friend.url_photo" alt="User Photo" class="user-photo rounded-circle">
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="modal-body">
-                    <div class="d-flex align-items-center justify-content-around">
-                        <div class="text-center">
-                            <img [src]="selectedFriend.url_photo" alt="UserPhoto"
-                                style="width: 100px; height: 100px; border-radius: 50%;">
-                            <p><strong>{{selectedFriend.id}}</strong></p>
-                        </div>
-                        <div class="d-flex">
-                            <div style="margin-right: 20px;" class="text-center">
-                                <img src="assets/MyFollows.png" alt="imagen" style="width: 40px; height: 40px;">
-                                <p><strong>SEGUIDOS:{{ selectedUser.friends.length }}</strong></p>
-                            </div>
+            </div>
+        </div>
 
-                            <div style="margin-left: 20px;" class="text-center">
-                                <img src="assets/Followers.png" alt="imagen" style="width: 40px; height: 40px;">
-                                <p><strong>SEGUIDORES:{{ selectedUser.followers.length }}</strong></p>
+        <div class="modal fade" id="ModalFollow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
+            *ngIf="selectedFriend">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content" style="background-color: rgba(255, 255, 255, 0.8);">
+                    <div class="modal-header">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="d-flex align-items-center justify-content-around">
+                            <div class="text-center">
+                                <img [src]="selectedFriend.url_photo" alt="UserPhoto"
+                                    style="width: 100px; height: 100px; border-radius: 50%;">
+                                <p><strong>{{selectedFriend.id}}</strong></p>
+                            </div>
+                            <div class="d-flex">
+                                <div style="margin-right: 20px;" class="text-center">
+                                    <img src="assets/MyFollows.png" alt="imagen" style="width: 40px; height: 40px;">
+                                    <p><strong>SEGUIDOS:{{ selectedUser.friends.length }}</strong></p>
+                                </div>
+
+                                <div style="margin-left: 20px;" class="text-center">
+                                    <img src="assets/Followers.png" alt="imagen" style="width: 40px; height: 40px;">
+                                    <p><strong>SEGUIDORES:{{ selectedUser.followers.length }}</strong></p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="modal-footer d-flex justify-content-center">
                     <div class="modal-footer d-flex justify-content-center">
+                        <div class="modal-footer d-flex justify-content-center">
 
-                        <img src="assets/Follow.png" type="button" *ngIf="!isFriend(selectedFriend)"
-                            (click)="onAddFriend(selectedFriend.id)" style="width: 50px; height: 50px; ">
-                        <p type="button" *ngIf="!isFriend(selectedFriend)" (click)="onAddFriend(selectedFriend.id)">
-                            <strong>SEGUIR</strong>
-                        </p>
+                            <img src="assets/Follow.png" type="button" *ngIf="!isFriend(selectedFriend)"
+                                (click)="onAddFriend(selectedFriend.id)" style="width: 50px; height: 50px; ">
+                            <p type="button" *ngIf="!isFriend(selectedFriend)" (click)="onAddFriend(selectedFriend.id)">
+                                <strong>SEGUIR</strong>
+                            </p>
 
-                        <img src="assets/Unfollow.png" *ngIf="isFriend(selectedFriend)" type="button"
-                            (click)="unfollow(selectedFriend.id)" style="width: 50px; height: 50px;">
-                        <p *ngIf="isFriend(selectedFriend)" type="button" (click)="unfollow(selectedFriend.id)">
-                            <strong>DEJAR DE SEGUIR</strong>
-                        </p>
+                            <img src="assets/Unfollow.png" *ngIf="isFriend(selectedFriend)" type="button"
+                                (click)="unfollow(selectedFriend.id)" style="width: 50px; height: 50px;">
+                            <p *ngIf="isFriend(selectedFriend)" type="button" (click)="unfollow(selectedFriend.id)">
+                                <strong>DEJAR DE SEGUIR</strong>
+                            </p>
 
-                        <img src="assets/Compare.png" *ngIf="isFriend(selectedFriend)" type="button"
-                            style="width: 40px; height: 40px;">
-                        <p *ngIf="isFriend(selectedFriend)" type="button"><strong>COMPARAR</strong></p>
+                            <img src="assets/Compare.png" *ngIf="isFriend(selectedFriend)" type="button"
+                                style="width: 40px; height: 40px;">
+                            <p *ngIf="isFriend(selectedFriend)" type="button"><strong>COMPARAR</strong></p>
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="d-flex justify-content-between">
 
-        <div class="col-md-6 text-center">
-            <div class="row" class="animate__animated animate__fadeInLeft" style="margin-right: 180px;">
-                <img class="animate__animated animate__fadeInLeft" src="assets/MyFollows.png" alt="Imagen" type="button"
-                    data-bs-toggle="collapse" data-bs-target="#leaderboardCollapse" aria-expanded="false"
-                    aria-controls="leaderboardCollapse" style="width: 60px; height: 60px; cursor: pointer;"
-                    (click)="getMyFriends()">
-
-                <p class="animate__animated animate__fadeInLeft"><strong>MIS SEGUIDOS</strong></p>
-
+        <div class="follows">
+            <div class="col-md-6 text-center animate__animated animate__fadeInLeft">
+                <div class="row">
+                    <div>
+                        <img src="assets/MyFollows.png" alt="Imagen" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#leaderboardCollapse" aria-expanded="false"
+                            aria-controls="leaderboardCollapse" style="width: 60px; height: 60px;"
+                            (click)="getMyFriends">
+                    </div>
+                    <p><strong>MIS SEGUIDOS</strong></p>
+                </div>
             </div>
 
-            <div class="collapse collapse-horizontal" id="leaderboardCollapse">
-                <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: 0px; margin-left: 0px;">
-                    <div class="table-container rounded">
-                        <table class="table table-dark table-striped rounded">
+            <div class="table-follows">
+                <div class="collapse collapse-horizontal" id="leaderboardCollapse">
+                    <div class="table-container">
+                        <table class="table table-striped ">
                             <tbody>
                                 <tr *ngFor="let friend of friends; let i = index">
                                     <td class="align-middle"><img [src]="friend.url_photo" alt="User Photo"
@@ -113,31 +115,41 @@
             </div>
         </div>
 
-        <div class="col-md-6 text-center">
-            <div class="row" class="animate__animated animate__fadeInRight" style="margin-left: 180px;">
-                <img class="animate__animated animate__fadeInRight" src="assets/Followers.png" alt="Imagen"
-                    type="button" data-bs-toggle="collapse" data-bs-target="#leaderboardCollapse2" aria-expanded="false"
-                    aria-controls="leaderboardCollapse2" style="width: 60px; height: 60px; cursor: pointer;"
-                    (click)="getMyFollowers()">
-                <p class="animate__animated animate__fadeInRight"><strong>MIS SEGUIDORES</strong></p>
+        <div class="follows">
+            <div class="col-md-6 text-center animate__animated animate__fadeInRight">
+                <div class="row">
+                    <div>
+                        <img src="assets/Followers.png" alt="Imagen" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#leaderboardCollapse2" aria-expanded="false"
+                            aria-controls="leaderboardCollapse2" style="width: 60px; height: 60px; cursor: pointer;"
+                            (click)="getMyFollowers()">
+                    </div>
+                    <p><strong>MIS SEGUIDORES</strong></p>
+                </div>
+            </div>
 
+            <div class="table-follows">
                 <div class="collapse collapse-horizontal" id="leaderboardCollapse2">
-                    <div class="col-md-6 offset-md-6" style="width: 300px; margin-top: 0px; margin-left: 0px;">
-                        <div class="table-container rounded">
-                            <table class="table table-dark table-striped rounded">
-                                <tbody>
-                                    <tr *ngFor="let follower of followers; let i = index">
-                                        <td class="align-middle"><img [src]="follower.url_photo" alt="User Photo"
-                                                class="user-photo rounded-circle"></td>
-                                        <td class="align-middle" style="font-size: 18px;">{{ follower.display_name}}
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="table-container">
+                        <table class="table table-striped">
+                            <tbody>
+                                <tr *ngFor="let follower of followers; let i = index">
+                                    <td class="align-middle"><img [src]="follower.url_photo" alt="User Photo"
+                                            class="user-photo rounded-circle"></td>
+                                    <td class="align-middle" style="font-size: 18px;">{{ follower.display_name}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
+
+
+
+
         </div>
+
     </div>
-</body>
+
+
+</div>
